[gd_scene load_steps=6 format=3 uid="uid://crsquj86f5i45"]

[ext_resource type="Script" uid="uid://dv74cyi0fwdye" path="res://content/dialogs/trader_item.gd" id="1_4hp2b"]
[ext_resource type="Texture2D" uid="uid://dlpibheo7nm6q" path="res://content/graphics/items/potion_red_small.png" id="1_bfc7h"]
[ext_resource type="Theme" uid="uid://b7cp6hc23xm1k" path="res://content/themes/dialog_theme.tres" id="1_g887m"]
[ext_resource type="Script" uid="uid://bahq0e5ufekrs" path="res://content/dialogs/trade_item.gd" id="3_h7aky"]

[sub_resource type="Resource" id="Resource_2isup"]
script = ExtResource("3_h7aky")
item_icon = ExtResource("1_bfc7h")
item_healin_power = 25
price = 5

[node name="TraderItem" type="PanelContainer"]
theme = ExtResource("1_g887m")
theme_type_variation = &"PanelInner"
script = ExtResource("1_4hp2b")
data = SubResource("Resource_2isup")
is_selected = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("1_bfc7h")
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="PriceLabel" type="Label" parent="VBoxContainer/CenterContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"
